[gd_scene load_steps=23 format=3 uid="uid://da00hutaakwk6"]

[ext_resource type="Script" uid="uid://qi4qdfy4cte8" path="res://scenes/game_scene/levels/level.gd" id="1_623lg"]
[ext_resource type="Script" uid="uid://bll85ag2um7hl" path="res://scenes/game_scene/tutorial_manager.gd" id="4_bsimd"]
[ext_resource type="Script" uid="uid://dkn8d6xrbenv8" path="res://test/hp_bar.gd" id="4_hehv2"]
[ext_resource type="PackedScene" uid="uid://blf6u2qahxm37" path="res://test/crumble_wall.tscn" id="5_27a66"]
[ext_resource type="PackedScene" uid="uid://ks83y4cfd5a5" path="res://scenes/game_scene/tutorials/tutorial_1.tscn" id="5_fmabn"]
[ext_resource type="PackedScene" uid="uid://bf1uufdc51v2b" path="res://test/spotlight.tscn" id="6_m77gi"]
[ext_resource type="PackedScene" uid="uid://ctxg1yp27kyil" path="res://test/spike.tscn" id="7_bsimd"]
[ext_resource type="PackedScene" uid="uid://b0f65tju21ps5" path="res://test/star.tscn" id="7_pmyid"]
[ext_resource type="PackedScene" uid="uid://dpra7angkhxrq" path="res://test/static_reflector.tscn" id="7_tukvp"]
[ext_resource type="PackedScene" uid="uid://b3ud20wyvvkoe" path="res://test/rotating_reflector.tscn" id="8_8a31v"]
[ext_resource type="PackedScene" uid="uid://lrfwgn1xotgo" path="res://test/player.tscn" id="9_5hj03"]
[ext_resource type="PackedScene" uid="uid://pdseefr663hp" path="res://test/crate.tscn" id="9_fmabn"]
[ext_resource type="PackedScene" uid="uid://bjmecy3ua5468" path="res://test/camera_2d.tscn" id="10_1wmy8"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_uchsv"]

[sub_resource type="Gradient" id="Gradient_1678g"]
colors = PackedColorArray(0.11119685, 0.11119684, 0.11119684, 1, 0.10980392, 0.10980392, 0.10980392, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fs73y"]
gradient = SubResource("Gradient_1678g")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_1678g"]
polygon = PackedVector2Array(-32, -32, -32, 32, 32, 32, 32, -32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1678g"]
size = Vector2(558, 128)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_fs73y"]
polygon = PackedVector2Array(-27.941002, -31.70642, -27.941002, 33.467896, 32, 32, 32, -32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fs73y"]
size = Vector2(476, 108)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_tco37"]
polygon = PackedVector2Array(-32, -32, -32, 32, 32, 32, 32, -32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tco37"]
size = Vector2(511, 106)

[node name="Level1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_623lg")
next_level_path = "res://scenes/game_scene/levels/level_2.tscn"

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.20511743, 0.20511743, 0.20511743, 1)

[node name="TutorialManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_bsimd")
tutorial_scenes = Array[PackedScene]([ExtResource("5_fmabn")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 270.0
offset_bottom = 30.0
text = "this is level 1"

[node name="HealthBars" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 252.0
offset_bottom = 72.0

[node name="hp_bar" type="ProgressBar" parent="CanvasLayer/HealthBars" node_paths=PackedStringArray("entity")]
self_modulate = Color(0, 1, 0, 1)
layout_mode = 2
value = 100.0
script = ExtResource("4_hehv2")
entity = NodePath("../../../level/player")

[node name="umbrella_bar" type="ProgressBar" parent="CanvasLayer/HealthBars"]
layout_mode = 2
value = 100.0
script = ExtResource("4_hehv2")

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.5)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -284.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="prev_btn" type="Button" parent="CanvasLayer/Buttons"]
visible = false
layout_mode = 2
text = "PREV"

[node name="restart_btn" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 2
text = "restart"

[node name="skip_btn" type="Button" parent="CanvasLayer/Buttons"]
visible = false
layout_mode = 2
text = "SKIP"

[node name="pause_btn" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 2
text = "pause"

[node name="level" type="Node2D" parent="."]

[node name="platforms" type="Node2D" parent="level"]

[node name="border" type="Node2D" parent="level/platforms"]
position = Vector2(640, 0)
rotation = -3.1415925

[node name="left_wall" type="StaticBody2D" parent="level/platforms/border"]
position = Vector2(639.99994, -360.00006)
rotation = 3.1415925

[node name="CollisionShape2D" type="CollisionShape2D" parent="level/platforms/border/left_wall"]
rotation = 1.5707964
shape = SubResource("WorldBoundaryShape2D_uchsv")

[node name="bottom_wall" type="StaticBody2D" parent="level/platforms/border"]
position = Vector2(-6.1035156e-05, -720)
rotation = 3.1415925

[node name="CollisionShape2D" type="CollisionShape2D" parent="level/platforms/border/bottom_wall"]
shape = SubResource("WorldBoundaryShape2D_uchsv")

[node name="top_wall" type="StaticBody2D" parent="level/platforms/border"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level/platforms/border/top_wall"]
shape = SubResource("WorldBoundaryShape2D_uchsv")

[node name="right_wall" type="StaticBody2D" parent="level/platforms/border"]
position = Vector2(-640, -359.99994)
rotation = 1.5707963

[node name="CollisionShape2D" type="CollisionShape2D" parent="level/platforms/border/right_wall"]
shape = SubResource("WorldBoundaryShape2D_uchsv")

[node name="static" type="Node2D" parent="level/platforms"]

[node name="platforms" type="Node2D" parent="level/platforms/static"]

[node name="StaticBody2D" type="StaticBody2D" parent="level/platforms/static/platforms"]
position = Vector2(397, 643)

[node name="Sprite2D" type="Sprite2D" parent="level/platforms/static/platforms/StaticBody2D"]
position = Vector2(246.5, 35)
scale = Vector2(8.703125, 2.09375)
texture = SubResource("GradientTexture2D_fs73y")

[node name="LightOccluder2D" type="LightOccluder2D" parent="level/platforms/static/platforms/StaticBody2D"]
position = Vector2(246.5, 35)
scale = Vector2(8.703125, 2.09375)
occluder = SubResource("OccluderPolygon2D_1678g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="level/platforms/static/platforms/StaticBody2D"]
position = Vector2(245, 31)
shape = SubResource("RectangleShape2D_1678g")

[node name="StaticBody2D2" type="StaticBody2D" parent="level/platforms/static/platforms"]
position = Vector2(1120, 141)

[node name="Sprite2D2" type="Sprite2D" parent="level/platforms/static/platforms/StaticBody2D2"]
position = Vector2(262.12503, 40.999992)
scale = Vector2(7.472656, 1.7031248)
texture = SubResource("GradientTexture2D_fs73y")

[node name="LightOccluder2D" type="LightOccluder2D" parent="level/platforms/static/platforms/StaticBody2D2"]
position = Vector2(247, 40.999992)
scale = Vector2(7.9453125, 1.7031248)
occluder = SubResource("OccluderPolygon2D_fs73y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="level/platforms/static/platforms/StaticBody2D2"]
position = Vector2(262, 41)
shape = SubResource("RectangleShape2D_fs73y")

[node name="StaticBody2D3" type="StaticBody2D" parent="level/platforms/static/platforms"]
position = Vector2(-135, 286)

[node name="Sprite2D2" type="Sprite2D" parent="level/platforms/static/platforms/StaticBody2D3"]
position = Vector2(246.25002, 45.499992)
scale = Vector2(7.992188, 1.7031248)
texture = SubResource("GradientTexture2D_fs73y")

[node name="LightOccluder2D" type="LightOccluder2D" parent="level/platforms/static/platforms/StaticBody2D3"]
position = Vector2(246.25002, 45.499992)
scale = Vector2(7.992188, 1.7031248)
occluder = SubResource("OccluderPolygon2D_tco37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="level/platforms/static/platforms/StaticBody2D3"]
position = Vector2(245.5, 45)
shape = SubResource("RectangleShape2D_tco37")

[node name="breakable" type="Node2D" parent="level/platforms"]

[node name="crumble_wall" parent="level/platforms/breakable" instance=ExtResource("5_27a66")]
position = Vector2(1112, 77)

[node name="moving" type="Node2D" parent="level/platforms"]

[node name="lights" type="Node2D" parent="level"]

[node name="spotlight" parent="level/lights" instance=ExtResource("6_m77gi")]
position = Vector2(640, 0)

[node name="reflectors" type="Node2D" parent="level"]

[node name="static_reflectors" type="Node2D" parent="level/reflectors"]

[node name="static_reflector2" parent="level/reflectors/static_reflectors" instance=ExtResource("7_tukvp")]
position = Vector2(891, 16)

[node name="static_reflector" parent="level/reflectors/static_reflectors" instance=ExtResource("7_tukvp")]
position = Vector2(389, 16)

[node name="rotating_reflectors" type="Node2D" parent="level/reflectors"]

[node name="rotating_reflector" parent="level/reflectors/rotating_reflectors" instance=ExtResource("8_8a31v")]
position = Vector2(642, 499)

[node name="spikes" type="Node2D" parent="level"]

[node name="spike" parent="level/spikes" instance=ExtResource("7_bsimd")]
position = Vector2(1022, 694)

[node name="spike2" parent="level/spikes" instance=ExtResource("7_bsimd")]
position = Vector2(268, 688)

[node name="crates" type="Node2D" parent="level"]

[node name="crate" parent="level/crates" instance=ExtResource("9_fmabn")]
position = Vector2(298, 232)

[node name="crate2" parent="level/crates" instance=ExtResource("9_fmabn")]
position = Vector2(121, 231)
collision_layer = 64
is_glass = true

[node name="player" parent="level" node_paths=PackedStringArray("hp_bar", "umbrella_bar") instance=ExtResource("9_5hj03")]
position = Vector2(84, 662)
hp_bar = NodePath("../../CanvasLayer/HealthBars/hp_bar")
umbrella_bar = NodePath("../../CanvasLayer/HealthBars/umbrella_bar")

[node name="Camera2D" parent="level/player" instance=ExtResource("10_1wmy8")]
visible = true
position = Vector2(0, -64)

[node name="star" parent="level" instance=ExtResource("7_pmyid")]
position = Vector2(1210, 68)

[connection signal="pressed" from="CanvasLayer/Buttons/restart_btn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/skip_btn" to="." method="_on_skip_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/pause_btn" to="." method="_on_pause_btn_pressed"]
[connection signal="reached_star" from="level/star" to="." method="_on_star_reached_star"]
